# ros_dynamixel_controller

./: Dockerfile  README  docker-compose.yml  ros_entrypoint.sh  run.sh
ros_dynamixel_controller/: package.xml  setup.cfg  setup.py
ros_dynamixel_controller/models/: latest_player.pt  latest_player_mlp_30.pt  latest_player_mlp_30_pure.pt
ros_dynamixel_controller/ros_dynamixel_controller/: dynamixel_address_book.py  dynamixel_controller.py  pid_controller.py  rl_controller.py  ros_dynamixel_controller.py  scanner.py  trajectory_generator.py
