<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_dynamixel_controller</name>
  <version>0.0.9</version>
  <description>The Dynamixel controller package</description>
  <maintainer email="valentin.yuryev@gmail.com">Valentin Yuryev</maintainer>
  <license>BSD3</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>